# adb

./: AdbWinApi.def  AdbWinUsbApi.def  Makefile.am  Makefile.in  README.md  autogen.sh  config.h.in  configure  configure.in  depcomp  framebuffer_service.c  index.html  install-sh  ltmain.sh  params.json  sysdeps.h  transport.c  transport_usb.c
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
debian/: changelog  control  copyright  dirs  files  gen_udev_rules.sh  rules  substvars
etc/: 51-android.rules
fastboot/: Makefile.am  Makefile.in  bootimg.c  bootimg.h
include/cutils/: list.h  log.h  logprint.h  partition_utils.h  pmem.h  xlog.h
libcutils/: Android.mk  Makefile.am  Makefile.in  list.c  mspace.c  partition_utils.c  pmem-dev.cpp  sched_policy.c  tztime.c
libcutils/arch-arm/: memset32.S
libzipfile/: Makefile.in
prebuilt/: adb_0.1.0-1_i386.deb
src/: Android.mk  Makefile.am  Makefile.in  adb.c  adb.h  sysdeps.h  usb_vendor_ids.c  usb_vendors.c
