#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.67)
AC_INIT(adb, 1.0.1, karfield@126.com)
AC_CONFIG_SRCDIR(src/adb.h)
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE(test, 1.0)

# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_LIBTOOL
AC_PROG_INSTALL

# Checks for libraries.
AC_CHECK_LIB(rt, sched_setscheduler)
AC_CHECK_LIB(pthread, pthread_create)
AC_CHECK_LIB(ncurses, delscreen)
AC_CHECK_LIB(z, inflateInit2_)

# Checks for header files.
AC_CHECK_HEADERS(fcntl.h limits.h memory.h netdb.h netinet/in.h stddef.h stdint.h stdlib.h string.h strings.h sys/ioctl.h sys/mount.h sys/socket.h sys/time.h termios.h unistd.h utime.h)

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_UID_T
AC_C_INLINE
AC_TYPE_INT64_T
AC_TYPE_MODE_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_HEADER_STDBOOL
AC_TYPE_UINT16_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_FORK
AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS(atexit dup2 getcwd gethostbyname gettimeofday localtime_r memset mkdir select socket strchr strdup strerror strpbrk strrchr strtol strtoul tzset utime)

hosttype=`uname -s`
AM_CONDITIONAL(HOST_IS_LINUX, test x"$hosttype" = xLinux)
AM_CONDITIONAL(HOST_IS_DARWIN, test x"$hosttype" = xDarwin)

AC_OUTPUT(Makefile src/Makefile fastboot/Makefile libcutils/Makefile libzipfile/Makefile)
